--- a/main.html
+++ b/main.html
@@ -9,7 +9,56 @@
 </head>
 <body>
     <!-- add table here -->
+<table style=" border: 1px solid #73AD21; border-radius:6px">
+	<thead style="background-color:#526650">
+<tr >
+	<th>Name</th>
+	<th>Saved</th>
+		<th>Kills</th>
+	<th>Deaths</th>
+	<th>Revive</th>
 
+	<th>Win</th>
+</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>hackerman</td>
+	
+		<td>10</td>
+			<td>0</td>
+			<td>1</td>
+			<td>0</td>
+			<td>0</td>
+	</tr>
+	
+	<tr>
+		<td>Cool Dogge</td>
+		<td>10</td>
+			<td>0</td>
+			<td>1</td>
+			<td>0</td>
+			<td>0</td>
+	</tr>
+	<tr>
+		<td>Andrews</td>
+		<td>10</td>
+			<td>0</td>
+			<td>1</td>
+			<td>0</td>
+			<td>0</td>
+		
+	</tr>
+	<tr>
+		<td>Strawberry</td>
+		<td>10</td>
+			<td>0</td>
+			<td>1</td>
+			<td>0</td>
+			<td>0</td>
+	</tr>
+	</tbody>
+</table>
         
 </body>
 </html>
